[package]
name = "yral-identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-validator-ingress-message = { git = "https://github.com/go-bazzinga/ic.git", rev = "efca3740d1269e5d840aecadc88a98ef1e860612", optional = true }
ic-types = { git = "https://github.com/go-bazzinga/ic.git", rev = "efca3740d1269e5d840aecadc88a98ef1e860612", optional = true }
ic-agent = { version = "0.34.0", default-features = false, optional = true }
candid = "0.10.6"
web-time = "1.1.0"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
k256 = "0.13.3"
rand = "0.8.5"

[features]
default = ["ic-agent", "ic-git"]
ic-agent = ["dep:ic-agent"]
ic-git = ["ic-validator-ingress-message", "ic-types"]
wasm-bindgen = ["ic-agent/wasm-bindgen"]
